Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.6.1, 5.7.0
-
None
-
-
ef8c6f6a0bf5e4c9ee41306f2df59048ab96038f
Description
Do a 2-finger drag on touch pad. Don't flick ie. make sure to stop the movement before releasing. When you lift your fingers, Flickable does not emit movementEnded() and the value of the moving property stays true.
import QtQuick 2.5 import QtQuick.Window 2.2 Window { width: 360 height: 520 visible: true ListView { model: 100 anchors.fill: parent delegate: Text { text: index } onContentYChanged: console.log("onContentYChanged", contentY) onMovementStarted: console.log("onMovementStarted") onMovementEnded: console.log("onMovementEnded") onMovingChanged: console.log("onMovingChanged", moving) } }
If you have for example a ScrollIndicator from QQC2 attached to the Flickable, the indicator does not hide since it thinks the content is moving.
Reproducible with the latest released pre-built versions of Qt 5.6 and Qt 5.7, and the latest qt5 5.7 branch.
Attachments
Issue Links
- relates to
-
QTBUG-47151 [reg 5.4->5.5] ListView behaves incorrect after flick: current item becomes hidden and keyboard scrolling buggy
-
- Closed
-
-
QTBUG-47697 ScrollView bounce broken on Mac OS X (regression)
-
- Closed
-
-
QTBUG-53177 Flickable: when flicking quickly with the Apple Trackpad, when it hits the end, it bounces twice
-
- Closed
-
- resulted in
-
QTBUG-63026 [REG: 5.6-2->5.6.3]: Scrolling gesture inside QtQuick jumpy on macOS touchpad
-
- Closed
-