Flickable: don't activate velocityTimeline if scroll phase available

The velocity timeline does not need to drive the movement if we can
be sure that there are enough wheel events coming from the OS to
move the flickable smoothly.  And when the velocityTimeline is not
active, the movementEndingTimer will emit the movementEnded signal,
as it should.

Task-number: QTBUG-55871
Change-Id: I5569be3aa6335d43ba162967ee03d08de3ba8096
Reviewed-by: J-P Nurmi <jpnurmi@qt.io>